[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
description = "A simple benchmark suite generator in Rust"
repository = "https://github.com/Defmc/hermes"
keywords = ["benchmark", "profiling"]
categories = ["accessibility", "development-tools"]
license = "MIT"

[[bench]]
name = "samples"
harness = false
